--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,53 +1,25 @@
 body {
 	color: #666;
 }
-time, strong, small {
-	color: #888;
-}
-strong {
-	margin-left: 10px;
-}
-h2, h4 {
-	color: #333;
-}
-h5 {
-	font-weight: 300;
-	font-size: 20px;
-}
-li {
-	padding: 25px 0;
-}
-section {
-	padding: 20px 0;
-}
 
-.border-bottom {
-	border-bottom: 1px solid #eee;
+.thumbnail {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding-left: 10px;
+	padding-right: 10px;
+	height: 120px;
+	align-items: center;
+	border: 1px solid #BFBFBF;
+	box-shadow: 3px 3px 4px #aaaaaa;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	margin-bottom: 30px;
 }
-
-section.home {
-	padding-top: 200px;
-	text-align: center;
+.thumnbail__person {
+	margin-bottom: 8px;
 }
-section.home button {
-	border-top-left-radius: 0;
-	border-bottom-left-radius: 0;
-}
-
-section.stats {
-	text-align: center;
-}
-section.stats span {
-	display: inline-block;
-	width: 80px;
-}
-section.stats h2 {
-	margin: 0;
-}
-
-section.orgs img {
-	border-radius: 3px;
-	margin: 5px;
-	width: 42px;
-	height: 42px;
+.thumnbail__image {
+	margin: 10px;
 }
